hphp/hack/test/typecheck/type_structure/type_structure5.php
<?hh // strict

class C {}

function test(): void {
  type_structure(C::class, 123);
}
